--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "moment": "^2.29.4",
     "mongoose": "^6.5.0",
     "nodemon": "^2.0.19",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7"
   }
 }
